update on forms

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
   </nav>
   <div class="form-container">
     <div class="form-wrap">
-      <form>
+      <form name="contact" method="POST" data-netlify="true">
         <h1 class="heading1">Contact Us</h1>
         <h3>
           This contact form is just for demo purpose
@@ -83,7 +83,7 @@
 							</div>
           </div>
           <div>
-            <button type="submit" class="btn">Send</button>
+            <button type="submit" value="Submit" class="btn">Send</button>
           </div>
           <br>
         </div>
